# manyrows

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
appkit-react/: README.md  package.json
appkit-react/src/: AppKit.tsx  types.ts
appkit-ui/: package.json
appkit-ui/src/: AppKit.tsx  Auth.tsx  Icon.tsx  Profile.tsx  main.tsx  theme.tsx
docs/: server-api.openapi.yaml
manyrows-core/: go.mod  go.sum  start.go
manyrows-core/api/: adminAuthHandler.go  adminUserParityHandler.go  admin_totp.go  apiKeyHandler.go  api_test.go  appDataHandler.go  appHandler.go  appHandlerApple.go  appHandlerExternalIDP.go  appHandlerGithub.go  appHandlerGoogle.go  appHandlerMicrosoft.go  appHandlerNaver.go  appHandlerOIDC.go  appInsightsHandler.go  app_data_test.go  app_insights_test.go  apps_test.go  auditIP.go  baseURL_test.go  clientDataHandler.go  client_api_test.go  configKeysHandler.go  configkeys_test.go  cookie_domain_integration_test.go  cors_test.go  delivery.go  external_idp_admin_test.go  external_idp_repo_test.go  featureflags_test.go  featuresHandler.go  hard_caps_integration_test.go  ipallowlist_test.go  memberPermissionsHandler.go  memberRolesHandler.go  member_roles_test.go  naver_trust_email_test.go  oidc_admin_test.go  pairingHandler.go  pairing_test.go  (+53 more)
manyrows-core/app/: app.go  router.go  (+1 more)
manyrows-ui/: package.json  vite.config.ts
server-go/: README.md  go.mod  manyrows.go  manyrows_test.go
server-node/: README.md
server-python/: .gitignore  README.md  pyproject.toml
server-python/src/manyrows/: __init__.py  client.py  models.py
(+128 files in other folders)
