[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manyrows-server"
version = "0.1.0"
description = "Typed Python client for the ManyRows server-to-server API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["manyrows", "auth", "authentication", "sdk"]
authors = [{ name = "ManyRows Pty Ltd." }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/manyrows"]
